DFCMSMOD # 249 Remedial case details Tab - Closed Case Details Updated the styles on the remedial recent case card to align all the rows and columns correctly Added styles for the expanded Icon

--- a/partner-portal/src/UI/src/app/remedial-case-details/remedial-case-details.component.scss
+++ b/partner-portal/src/UI/src/app/remedial-case-details/remedial-case-details.component.scss
@@ -21,6 +21,11 @@
     flex-direction: row;
     gap: 24px;
   }
+
+  .expandedIcon {
+    transform: scale(1.5);
+    color: #003366;
+  }
   
 .case-details-border {
     border-left: 2px solid #808080;
